<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/old_email"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            tools:layout_editor_absoluteY="82dp"
            tools:layout_editor_absoluteX="8dp"
            android:layout_above="@+id/password"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="17dp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:hint="@string/prompt_password"
            android:imeActionId="@+id/login"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            tools:layout_editor_absoluteX="126dp"
            tools:layout_editor_absoluteY="125dp"
            android:layout_above="@+id/newPassword"
            android:layout_toEndOf="@+id/progressBar" />

        <EditText
            android:id="@+id/newPassword"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:hint="@string/new_pass"
            android:imeActionId="@+id/login"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            tools:layout_editor_absoluteX="106dp"
            tools:layout_editor_absoluteY="168dp"
            android:layout_above="@+id/changePass"
            android:layout_alignParentStart="true" />

        <Button
            android:id="@+id/changePass"
            style="?android:textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/change_password_button"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_gravity="center"
            android:layout_marginStart="46dp"
            android:layout_marginLeft="46dp"
            android:layout_marginBottom="0dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/btn_change"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/back"
            style="?android:textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/change_password_button"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="bottom"
            android:layout_marginEnd="46dp"
            android:layout_marginRight="46dp"
            android:layout_marginBottom="0dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/back"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="199dp"
            tools:layout_editor_absoluteY="211dp" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="0dp" />


        <Button
            android:id="@+id/change_password_button"
            style="?android:textAppearanceSmall"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="42dp"
            tools:layout_editor_absoluteY="312dp"
            android:layout_above="@+id/remove_user_button"
            android:layout_alignStart="@+id/remove_user_button" />

        <Button
            android:id="@+id/remove_user_button"
            style="?android:textAppearanceSmall"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/remove_user"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="42dp"
            tools:layout_editor_absoluteY="408dp"
            android:layout_above="@+id/sign_out"
            android:layout_alignStart="@+id/sign_out" />

        <Button
            android:id="@+id/sign_out"
            style="?android:textAppearanceSmall"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/btn_sign_out"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="42dp"
            tools:layout_editor_absoluteY="456dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="130dp"/>

        <TextView
            android:id="@+id/useremail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/old_email"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="46dp"
            android:gravity="center"
            android:hint="@string/email_id"
            android:textSize="30sp"
            android:textStyle="bold|italic" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/bottomBar"
            android:layout_alignParentBottom="true">


            <android.support.design.widget.BottomNavigationView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/bottomNavView_Bar"
                android:background="@drawable/white_orange_border_bottom"
                app:menu="@menu/bottom_navigation_menu">

            </android.support.design.widget.BottomNavigationView>


        </RelativeLayout>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>