<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountActivity.SignupActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/register_background"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">


        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:contentDescription=""
            android:src="@mipmap/ic_launcher_foreground"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/full_name"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:hint="@string/hint_name"
            android:layout_marginBottom="12dp"
            android:inputType="textEmailAddress"
            android:nextFocusDown="@id/email"
            android:maxLines="1"
            android:background="@drawable/edittext_round_corners"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/white"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/edittext_round_corners"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/white"
 />



        <EditText
            android:id="@+id/password"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:focusableInTouchMode="true"
            android:background="@drawable/edittext_round_corners"
            android:hint="@string/hint_password"
            android:imeActionId="@+id/login"
            android:imeOptions="actionUnspecified"
            android:textColorHint="@android:color/white"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:layout_marginBottom="20dp" />


        <Button
            android:id="@+id/sign_up_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/edittext_round_corners_orange"
            android:text="@string/action_sign_in_short"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <!-- Link to Login Screen -->

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@null"
            android:text="@string/btn_link_to_login"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="15sp" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />

</android.support.constraint.ConstraintLayout>